--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,5 +18,10 @@
     padding: 2px;
     border: 1px solid #333333;
     border-top: none;
+
+    .name {
+      margin-left: 8px;
+      text-transform: capitalize;
+    }
   }
 }
