Style: change background color

--- a/src/css/above-the-fold.scss
+++ b/src/css/above-the-fold.scss
@@ -23,7 +23,7 @@ header {
   font-family: $font-stack;
   font-size: $font-size;
   color: $font-color;
-  background-color: #e5e5e5;
+  background-color: #a88d61;
 
   h1,
   h2,
