Style: update summary styles

--- a/src/css/above-the-fold.scss
+++ b/src/css/above-the-fold.scss
@@ -51,6 +51,11 @@ header {
   label {
     display: block;
     font-weight: bold;
+    margin: 0;
+  }
+
+  .summary__stats {
+    margin-bottom: 10px;
   }
 }
 
