Feat: add loading animation

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,11 @@
+.health-tracker__search .search__wrapper {
+  position: relative; }
+
+.health-tracker__search .search__loading {
+  position: absolute;
+  top: 10px;
+  right: 15px; }
+
 .health-tracker__search .food-choices-wrapper {
   position: relative; }
 
