--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,14 @@
 .health-tracker__search {
+  .search__wrapper {
+    position: relative;
+  }
+
+  .search__loading {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+  }
+
   .food-choices-wrapper {
     position: relative;
   }
