--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -9,7 +9,7 @@
     right: 15px;
   }
 
-  .food-choices-wrapper {
+  .search__food-choices-wrapper {
     position: relative;
   }
 
@@ -29,7 +29,7 @@
     border: 1px solid #333333;
     border-top: none;
 
-    .name {
+    .search__name {
       margin-left: 8px;
       text-transform: capitalize;
     }
