--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -13,7 +13,7 @@
     position: relative;
   }
 
-  .food-choices {
+  .search__food-choices {
     position: absolute;
     background-color: #fefefe;
     z-index: 1;
