--- a/src/css/above-the-fold.scss
+++ b/src/css/above-the-fold.scss
@@ -64,7 +64,7 @@ header {
   background-color: #e5e5e5;
   padding: 20px 0;
 
-  .search {
+  .search__search-input {
     width: 100%;
     border: 1px solid #333;
     padding: 5px;
