--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -68,3 +68,11 @@
     right: 20px;
   }
 }
+
+footer {
+  background-color: #333333;
+  color: #eeeeee;
+  text-align: center;
+  font-size: 1.3rem;
+  padding: 10px;
+}
