--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -34,6 +34,10 @@
       text-transform: capitalize;
     }
   }
+
+  li:hover {
+    background-color: #fff991;
+  }
 }
 
 .health-tracker__food-list {
