Doc: add file headers

--- a/src/css/above-the-fold.css
+++ b/src/css/above-the-fold.css
@@ -1,3 +1,7 @@
+/*
+ * Critical styles and above-the-fold CSS defined here.
+ * Author: Brian Quach
+ */
 /* Default variables */
 /* Mixins */
 header {
