--- a/src/css/above-the-fold.scss
+++ b/src/css/above-the-fold.scss
@@ -1,3 +1,8 @@
+/*
+ * Critical styles and above-the-fold CSS defined here.
+ * Author: Brian Quach
+ */
+
 /* Default variables */
 $font-stack: Helvetica, sans-serif;
 $font-color: #282828;
