--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+/*
+ * Non-critical styles and below-the-fold CSS defined here.
+ * Author: Brian Quach
+ */
 .health-tracker__search .search__wrapper {
   position: relative; }
 
