--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,3 +1,8 @@
+/*
+ * Non-critical styles and below-the-fold CSS defined here.
+ * Author: Brian Quach
+ */
+
 .health-tracker__search {
   .search__wrapper {
     position: relative;
